--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,96 @@
     padding: 0;
 }
 
+/* rgb(22, 139, 36) transition: background-color .3s ease; */
+
 body {
-    background-color: gray;
-    background: linear-gradient(135deg, #43edd3 0%, #d135ed 100%);
+    font-size: 16px;
+    color: #252525;
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    background-color: rgb(250, 250, 251);
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    max-width: 1200px;
+    padding: 0 1rem;
+    margin: 0 auto;
+}
+
+.about {
+    margin: 10vh 0 2rem;
+}
+
+.about__inner {
+    padding-bottom: 2rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.about__info {
+    margin: 1rem 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.about__name {
+    font-size: 3rem;
+    margin: 2rem 0;
+}
+
+.about__title {
+    font-size: 2rem;
+    text-decoration: underline;
+    margin: 0 0 3rem;
+}
+
+.about__link {
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 1rem 1.2rem;
+    margin-right: 1rem;
+    border-radius: 0.5rem;
+    font-weight: 700;
+    color: #ffffff;
+    background-color: #199F29;
+    transition: background-color .3s ease, box-shadow .3s ease;
+    box-shadow: 0 10px 30px rgba(16, 230, 52, 0.3);
+}
+
+.about__link:hover {
+    background-color: rgb(22, 128, 34);
+    box-shadow: none;
+}
+
+.skills__inner {
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+    flex-wrap: wrap;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.skills__title {
+    font-size: 1.7rem;
+    font-weight: 700;
+    margin-right: 1rem;
+}
+
+.skills__stack {
+    font-size: 1.5rem;
+}
+
+.projects__inner {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    row-gap: 2rem;
+    column-gap: 2rem;
+}
+
+.project_card {
+    max-width: 300px;
 }
