--- a/styles.css
+++ b/styles.css
@@ -93,5 +93,45 @@ a {
 }
 
 .project_card {
+    margin: 1rem 0;
+    box-sizing: border-box;
+    padding: 1rem;
     max-width: 300px;
+    cursor: pointer;
+}
+
+.project_card:hover {
+    border-radius: 4px;
+    box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.5);
+}
+
+.project_card h3 {
+    text-align: center;
+}
+
+.project_card img {
+    display: block;
+    width: 250px;
+    margin: 1rem auto;
+}
+
+.project_card p {
+    font-weight: 500;
+}
+
+.links_list {
+    list-style: none;
+}
+
+.links_list li {
+    margin: 5px 0;
+    border-bottom: 2px solid rgba(22, 128, 34, 0.3);
+}
+
+.links_list li:hover {
+    border-bottom: 2px solid rgba(22, 128, 34, 0.8);
+}
+
+.links_list li a {
+    color: black;
 }
