--- a/styles.css
+++ b/styles.css
@@ -85,19 +85,19 @@ a {
     font-size: 1.5rem;
 }
 
-.projects__inner {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 300px);
-    row-gap: 2rem;
-    column-gap: 2rem;
+.projects__title {
+    text-align: center;
+    margin: 1rem 0;
+    font-size: 2rem;
 }
 
 .project_card {
     margin: 1rem 0;
     box-sizing: border-box;
     padding: 1rem;
-    max-width: 300px;
-    cursor: pointer;
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
 }
 
 .project_card:hover {
@@ -105,15 +105,26 @@ a {
     box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.5);
 }
 
-.project_card h3 {
-    text-align: center;
+.project_card-info {
+    display: flex;
+    flex-direction: column;
+    max-width: 60%;
 }
+
+.project_card-info h3 {
+    margin-top: 1rem;
+}
+
+.project_card-info p {
+    margin-top: 0.75rem;
+}
+
 
 .project_card img {
     display: block;
     height: 200px;
     width: 250px;
-    margin: 1rem auto;
+    margin: 1rem;
 }
 
 .project_card p {
@@ -122,10 +133,12 @@ a {
 
 .links_list {
     list-style: none;
+    padding-top: 0.8rem;
 }
 
 .links_list li {
-    margin: 5px 0;
+    display: inline;
+    margin-right: 0.5rem;
     border-bottom: 2px solid rgba(22, 128, 34, 0.3);
 }
 
